Waiting for leader movement, dialog when chaniging a turn, animation for that dialog, fixed opponent movement visibility, small bux fixes

--- a/karcioszki-ui/src/app/karcioszki.style.scss
+++ b/karcioszki-ui/src/app/karcioszki.style.scss
@@ -222,6 +222,22 @@ mat-form-field {
   border-radius: 5px;
   box-shadow: 1.9px 2px 2px 0px rgba(0, 0, 0, 0.3);
 }
+.game-turn-dialog {
+  z-index: 999;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  top:0;
+}
+.text-high-contrast {
+  font-size: 1.8em;
+  letter-spacing: 2px;
+  font-weight: bold;
+  color: white;
+}
 
 /// OLD CODE ///
 
